# _

./: .editorconfig  .pre-commit-config.yaml  README.md  _bad_code.py  bad.py  bad_code.py  pyproject.toml
.github/workflows/: style-checking.yml
project1/: main.py
project2/: main.py
sample-node/: .eslintrc.js  bad.js  bad.ts  eslint.config.cjs  eslint.config.js  package-lock.json  package.json
sample-node-js/: bad.js  eslint.config.mjs  package-lock.json  package.json
